<resources>
    <string name="app_name">智能保险箱</string>
    <string name="app_title">智能保险箱</string>
    <string name="box_status">保险箱状态</string>
    <string name="success_get_box_status">获取保险箱状态成功</string>
    <string name="success_open_box">开启保险箱成功</string>
    <string name="success_close_box">关闭保险箱成功</string>

    <string name="error_get_box_status">获取保险箱状态失败</string>
    <string name="error_open_box">开启保险箱失败</string>
    <string name="error_close_box">关闭保险箱失败</string>
    <string name="error_response_frame_head">请求返回数据帧头错误</string>

    <string name="normal_open_box">保险箱正常开启</string>
    <string name="normal_close_box">保险箱正常关闭</string>
    <string name="unusually_open_box">保险箱异常开启</string>

    <string name="success_open_box_defence">保险箱布防成功</string>
    <string name="success_close_box_defence">保险箱撤防成功</string>
    <string name="error_open_box_defence">保险箱布防失败</string>
    <string name="error_close_box_defence">保险箱撤防失败</string>

    <string name="box_control">保险箱状态与控制</string>
    <string name="box_status_open">保险箱已开启</string>
    <string name="box_status_close">保险箱已关闭</string>
    <string name="box">保险箱</string>
    <string name="box_control_tip">注意事项：当前只支持远程开启保险箱，不能操作关闭</string>
    <string name="box_control_tip_message">当前只支持远程开启保险箱，不能操作关闭</string>
    <string name="box_defence_control">保险箱布防/撤防状态与控制</string>
    <string name="box_defence_open">已布防</string>
    <string name="box_defence_close">已撤防</string>
    <string name="defence_open">布防</string>
    <string name="defence_close">撤防</string>
    <string name="alarm_tip_title">报警提示</string>
    <string name="alarm_tip_message">保险箱异常开启，\n请及时查看现场！</string>
    <string name="alarm_remove">解除报警</string>
    <string name="query_datas">批量查询数据</string>
</resources>