<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0eff5"
    tools:context="com.stefan.smartsafe.activity.MainActivity">

    <View
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_control"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_18"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/box_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_status_close"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>

    <LinearLayout
        android:gravity="center"
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:id="@+id/box_control_switch_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_safe_lock"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_gray" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>

    <LinearLayout
        android:gravity="center|left"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_control_tip"
            android:textColor="@color/text_light_red"
            android:textSize="@dimen/text_size_12"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_defence_control"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_18"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="0"
            android:id="@+id/box_defence_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/box_defence_open"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>

    <LinearLayout
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="110dp">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/box_defence_open_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_protection_blue"/>
            <TextView
                android:id="@+id/box_defence_open_state_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defence_open"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_size_16"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/box_defence_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_switch_left"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/box_defence_close_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_removal_grey"/>
            <TextView
                android:id="@+id/box_defence_close_state_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defence_close"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>
    <Button
        android:id="@+id/query_datas_btn"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/query_datas"
        android:background="@drawable/shape_login_btn_bg"
        android:textSize="@dimen/text_size_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/postResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_gas"
            android:text="请求结果 : "
            android:textIsSelectable="true"/>

    </LinearLayout>

</LinearLayout>
